# projeto_etl

./: README.md  etl.py  pyproject.toml  utils_log.py
data/: pokemons.csv  pokemons.parquet
